--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "quicktok",
-  "version": "1.0.0",
-  "description": "TikTok trending viewer",
-  "author": "Adrián",
-  "private": true,
+  "version": "1.1.0",
+  "description": "TikTok web trending viewer",
+  "author": "Adrian Barrio <statickidz@gmail.com>",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -13,35 +12,35 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/google-analytics": "^2.2.0",
-    "@nuxtjs/pwa": "^2.6.0",
-    "animate.css": "^3.7.0",
-    "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "cross-env": "^5.2.0",
-    "hooper": "^0.1.2",
-    "nuxt": "^2.4.0"
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/pwa": "^3.3.5",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.0.2",
+    "bootstrap-vue": "^2.21.2",
+    "cross-env": "^7.0.3",
+    "hooper": "^0.3.4",
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^0.0.1",
-    "@nuxtjs/proxy": "^1.3.3",
+    "@nuxtjs/eslint-config": "^6.0.1",
+    "@nuxtjs/proxy": "^2.1.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.15.1",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-config-standard": ">=12.0.0",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": ">=16.0.3",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": ">=2.16.0",
-    "eslint-plugin-jest": ">=22.3.0",
-    "eslint-plugin-node": ">=8.0.1",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-promise": ">=4.0.1",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "node-sass": "^4.13.1",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.16.4",
-    "sass-loader": "^7.1.0"
+    "eslint-plugin-import": ">=2.23.4",
+    "eslint-plugin-jest": ">=24.3.6",
+    "eslint-plugin-node": ">=11.1.0",
+    "eslint-plugin-nuxt": ">=2.0.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": ">=5.1.0",
+    "eslint-plugin-standard": ">=4.1.0",
+    "eslint-plugin-vue": "^7.12.0",
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.1",
+    "sass-loader": "^10"
   }
 }
