--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bootstrap-vue": "^2.21.2",
     "cross-env": "^7.0.3",
     "hooper": "^0.3.4",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vue2-timeago": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.1",
