--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cross-env": "^7.0.3",
     "hooper": "^0.3.4",
     "nuxt": "^2.15.7",
+    "sass": "^1.62.1",
     "vue2-timeago": "^2.0.0"
   },
   "devDependencies": {
@@ -39,7 +40,6 @@
     "eslint-plugin-promise": ">=5.1.0",
     "eslint-plugin-standard": ">=4.1.0",
     "eslint-plugin-vue": "^7.12.0",
-    "node-sass": "^6.0.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
     "sass-loader": "^10"
